@@ -14,6 +14,7 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import com.publicissapient.kpidashboard.common.model.application.ProjectRelease;
+import com.publicissapient.kpidashboard.common.model.jira.ReleaseWisePI;
 import com.publicissapient.kpidashboard.common.repository.application.ProjectReleaseRepo;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
@@ -92,9 +93,12 @@ public class KpiDataProvider {
 	 * Fetches data from DB for the given project and sprints combination.
 	 *
 	 * @param kpiRequest
+	 *            The KPI request object.
 	 * @param basicProjectConfigId
+	 *            The project config ID.
 	 * @param sprintList
-	 * @return
+	 *            The list of sprint IDs.
+	 * @return A map containing story list, sprint details, and JiraIssue history.
 	 */
 	public Map<String, Object> fetchIssueCountDataFromDB(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
 			List<String> sprintList) {
@@ -162,9 +166,12 @@ public class KpiDataProvider {
 	 * Fetch data from data for given project.
 	 *
 	 * @param basicProjectConfigId
+	 *            The project config ID.
 	 * @param startDate
+	 *            The start date
 	 * @param endDate
-	 * @return
+	 *            The end date
+	 * @return The list of Build
 	 */
 	public List<Build> fetchBuildFrequencyData(ObjectId basicProjectConfigId, String startDate, String endDate) {
 		List<String> statusList = List.of(BuildStatus.SUCCESS.name());
@@ -197,7 +204,7 @@ public class KpiDataProvider {
 		Map<String, Map<String, Object>> uniqueProjectMapForSubTask = new HashMap<>();
 		Map<String, Object> resultListMap = new HashMap<>();
 
-		/** additional filter **/
+		// additional filter **/
 		KpiDataHelper.createAdditionalFilterMap(kpiRequest, mapOfFilters, Constant.SCRUM, CommonConstant.QA,
 				filterHelperService);
 
@@ -259,7 +266,6 @@ public class KpiDataProvider {
 
 		return resultListMap;
 	}
-
 
 	/**
 	 * Fetches sprint Velocity data from the database for the given project and
@@ -325,7 +331,7 @@ public class KpiDataProvider {
 
 		List<SprintDetails> totalSprintDetails = sprintRepositoryCustom
 				.findByBasicProjectConfigIdInAndStateInOrderByStartDateDesc(basicProjectConfigObjectIds,
-						sprintStatusList, Long.valueOf(customApiConfig.getSprintCountForFilters()) + SP_CONSTANT);
+						sprintStatusList, (long) customApiConfig.getSprintCountForFilters() + SP_CONSTANT);
 
 		List<String> totalIssueIds = new ArrayList<>();
 		if (CollectionUtils.isNotEmpty(totalSprintDetails)) {
@@ -355,9 +361,8 @@ public class KpiDataProvider {
 			List<SprintDetails> projectWiseSprintDetails = new ArrayList<>();
 			projectWiseTotalSprintDetails.forEach((projectConfigId, sprintDetailsList) -> {
 				List<SprintDetails> sprintDetails = sprintDetailsList.stream()
-						.limit(Long.valueOf(customApiConfig.getSprintCountForFilters()) + SP_CONSTANT)
-						.collect(Collectors.toList());
-				sprintDetails.stream().forEach(dbSprintDetail -> {
+						.limit((long) customApiConfig.getSprintCountForFilters() + SP_CONSTANT).toList();
+				sprintDetails.forEach(dbSprintDetail -> {
 					FieldMapping fieldMapping = configHelperService.getFieldMappingMap()
 							.get(dbSprintDetail.getBasicProjectConfigId());
 					// to modify sprintdetails on the basis of configuration for the project
@@ -382,7 +387,7 @@ public class KpiDataProvider {
 					sprintList.stream().distinct().collect(Collectors.toList()));
 		}
 
-		/** additional filter **/
+		// additional filter **/
 		KpiDataHelper.createAdditionalFilterMap(kpiRequest, mapOfFilters, Constant.SCRUM, DEV, filterHelperService);
 
 		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
@@ -396,6 +401,19 @@ public class KpiDataProvider {
 		return resultListMap;
 	}
 
+	/**
+	 * Fetches Scope Churn KPI data from the database for the given project and
+	 * sprints combination.
+	 *
+	 * @param kpiRequest
+	 *            The KPI request object.
+	 * @param basicProjectConfigId
+	 *            The project config ID.
+	 * @param sprintList
+	 *            The list of sprint IDs.
+	 * @return A map containing story list, sprint details, and Scope change issue
+	 *         history.
+	 */
 	public Map<String, Object> fetchScopeChurnData(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
 			List<String> sprintList) {
 		log.info("Fetching Scope Churn KPI Data for Project {}", basicProjectConfigId.toString());
@@ -444,7 +462,7 @@ public class KpiDataProvider {
 			}
 		});
 
-		/** additional filter **/
+		// additional filter **/
 		KpiDataHelper.createAdditionalFilterMap(kpiRequest, mapOfFilters, Constant.SCRUM, DEV, filterHelperService);
 
 		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
@@ -465,6 +483,18 @@ public class KpiDataProvider {
 		return resultListMap;
 	}
 
+	/**
+	 * Fetches Commitment Reliability KPI data from the database for the given
+	 * project and sprints combination.
+	 *
+	 * @param kpiRequest
+	 *            The KPI request object.
+	 * @param basicProjectConfigId
+	 *            The project config ID.
+	 * @param sprintList
+	 *            The list of sprint IDs.
+	 * @return A map containing story list, sprint details.
+	 */
 	public Map<String, Object> fetchCommitmentReliabilityData(KpiRequest kpiRequest, ObjectId basicProjectConfigId,
 			List<String> sprintList) {
 		log.info("Fetching Commitment Reliability KPI Data for Project {}", basicProjectConfigId.toString());
@@ -496,7 +526,7 @@ public class KpiDataProvider {
 
 		Map<ObjectId, Map<String, List<LocalDateTime>>> finalProjectWiseDuplicateIssuesWithMinCloseDate = projectWiseDuplicateIssuesWithMinCloseDate;
 		Set<String> totalIssue = new HashSet<>();
-		sprintDetails.stream().forEach(dbSprintDetail -> {
+		sprintDetails.forEach(dbSprintDetail -> {
 			FieldMapping fieldMapping = fieldMappingMap.get(dbSprintDetail.getBasicProjectConfigId());
 			// to modify sprintdetails on the basis of configuration for the project
 			SprintDetails sprintDetail = KpiDataHelper.processSprintBasedOnFieldMappings(dbSprintDetail,
@@ -517,7 +547,7 @@ public class KpiDataProvider {
 
 		});
 
-		/** additional filter **/
+		// additional filter **/
 		KpiDataHelper.createAdditionalFilterMap(kpiRequest, mapOfFilters, Constant.SCRUM, DEV, filterHelperService);
 		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
 				basicProjectConfigIds.stream().distinct().toList());
@@ -529,6 +559,14 @@ public class KpiDataProvider {
 		return resultListMap;
 	}
 
+	/**
+	 * Fetches Cost of Delay KPI data from the database for the given project and
+	 * sprints combination.
+	 *
+	 * @param basicProjectConfigId
+	 *            The project config ID.
+	 * @return A map containing cost of delay data.
+	 */
 	public Map<String, Object> fetchCostOfDelayData(ObjectId basicProjectConfigId) {
 		Map<String, Object> resultListMap = new HashMap<>();
 		Map<String, Map<String, Object>> uniqueProjectMap = new HashMap<>();
@@ -566,8 +604,75 @@ public class KpiDataProvider {
 		return resultListMap;
 	}
 
+	/**
+	 * Fetches Release Frequency KPI data from the database for the given project
+	 * and sprints combination.
+	 *
+	 * @param basicProjectConfigId
+	 *            The project config ID.
+	 * @return A list containing Project releases data.
+	 */
 	public List<ProjectRelease> fetchProjectReleaseData(ObjectId basicProjectConfigId) {
 		log.info("Fetching Release Frequency KPI Data for Project {}", basicProjectConfigId.toString());
 		return projectReleaseRepo.findByConfigIdIn(List.of(basicProjectConfigId));
+	}
+
+	/**
+	 * Fetches PI Predictability KPI data from the database for the given project
+	 * and sprints combination.
+	 *
+	 * @param basicProjectConfigId
+	 *            The project config ID.
+	 * @return A list containing Project releases data.
+	 */
+	public List<JiraIssue> fetchPiPredictabilityData(ObjectId basicProjectConfigId) {
+		log.info("Fetching PI Predictability KPI Data for Project {}", basicProjectConfigId.toString());
+		Map<String, List<String>> mapOfFilters = new LinkedHashMap<>();
+		Map<String, Map<String, Object>> uniqueProjectMap = new HashMap<>();
+
+		FieldMapping fieldMapping = configHelperService.getFieldMappingMap().get(basicProjectConfigId);
+		List<String> issueTypeList;
+		if (Optional.ofNullable(fieldMapping.getJiraIssueEpicTypeKPI153()).isPresent()) {
+			issueTypeList = fieldMapping.getJiraIssueEpicTypeKPI153();
+		} else {
+			issueTypeList = new ArrayList<>();
+		}
+
+		mapOfFilters.put(JiraFeature.BASIC_PROJECT_CONFIG_ID.getFieldValueInFeature(),
+				List.of(basicProjectConfigId.toString()));
+		mapOfFilters.put(JiraFeature.ISSUE_TYPE.getFieldValueInFeature(), issueTypeList);
+
+		Map<String, List<String>> projectWisePIList = new HashMap<>();
+		List<ReleaseWisePI> releaseWisePIList = jiraIssueRepository
+				.findUniqueReleaseVersionByUniqueTypeName(mapOfFilters);
+		Map<String, List<ReleaseWisePI>> projectWiseData = releaseWisePIList.stream()
+				.collect(Collectors.groupingBy(ReleaseWisePI::getBasicProjectConfigId));
+
+		projectWiseData.forEach((projectId, releaseWiseData) -> {
+			Map<String, List<ReleaseWisePI>> versionWiseData = releaseWiseData.stream()
+					.filter(releaseWisePI -> CollectionUtils.isNotEmpty(releaseWisePI.getReleaseName()))
+					.collect(Collectors.groupingBy(releaseWisePI -> releaseWisePI.getReleaseName().get(0)));
+			versionWiseData.forEach((version, piData) -> {
+				if (CollectionUtils.isNotEmpty(piData) && CollectionUtils.isNotEmpty(issueTypeList) && piData.stream()
+						.anyMatch(releaseWisePI -> issueTypeList.contains(releaseWisePI.getUniqueTypeName()))) {
+					projectWisePIList.putIfAbsent(projectId, new ArrayList<>());
+					projectWisePIList.computeIfPresent(projectId, (k, v) -> {
+						Optional<ReleaseWisePI> epicPIData = piData.stream()
+								.filter(releaseWisePI -> issueTypeList.contains(releaseWisePI.getUniqueTypeName()))
+								.findFirst();
+						epicPIData.ifPresent(releaseWisePI -> v.add(releaseWisePI.getReleaseName().get(0)));
+						return v;
+					});
+				}
+			});
+		});
+
+		projectWisePIList.forEach((projectId, piDataList) -> {
+			Map<String, Object> mapOfProjectFilters = new LinkedHashMap<>();
+			mapOfProjectFilters.put(CommonConstant.RELEASE, CommonUtils.convertToPatternListForSubString(piDataList));
+			uniqueProjectMap.put(projectId, mapOfProjectFilters);
+		});
+
+		return jiraIssueRepository.findByRelease(mapOfFilters, uniqueProjectMap);
 	}
 }
